Fix video list item alignment.

--- a/src/components/VideoList/style.pcss
+++ b/src/components/VideoList/style.pcss
@@ -4,6 +4,7 @@ section.video-list {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	align-items: center;
 
 	margin: 15px 0;
 
